# llm_leaderboard_eval_bot

./: .gitignore  affected_models.txt  bot.py  delete_extra_hashs.py  envs.py  eval_queue.py  evaluate_llms.py  hf_util.py  lm_eval_util.py  process_and_upload_results.py  pyproject.toml  requirements.txt  reset_spaces.py  retry_failed.py  retry_running.sh  run.sh  run_eval.py  scheduler_run.sh  tasks.py  test.ipynb
tasks_config/: legal_config.yaml  legal_config_0_0_4.yaml  pt_config.yaml
